tests/machine/x/ocaml/fun_call.ml
let rec add a b =
  (a + b)


let () =
  print_endline add 2 3
